HADOOP-1421 HADOOP-1466 When a region server dies, its log file must be split up on a per region basis so that region servers are assigned the regions have a log to apply edits from. Enhance fail over capabilities.
For all the files modified, clean up javadoc, class method and field visibility.

git-svn-id: https://svn.apache.org/repos/asf/lucene/hadoop/trunk@546192 13f79535-47bb-0310-9956-ffa450edef68